<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.wacker.carolohseapp.AppInfoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_heading"
            android:id="@+id/AppInfoHeadingTextView"
            android:textAlignment="center"
            android:textSize="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_info_text"
            android:id="@+id/DevInfoTextView"
            android:textAlignment="center"
            android:layout_below="@+id/AppInfoHeadingTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:textSize="20dp"
            android:clickable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:paddingLeft="25dp"
            android:layout_height="wrap_content"
            android:text="@string/car_image_source_info_text"
            android:id="@+id/CarImageSourceInfoTextView"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/DevInfoTextView"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="match_parent"
            android:paddingLeft="25dp"
            android:layout_height="wrap_content"
            android:text="@string/tire_tread_texture_source_info_text"
            android:id="@+id/TireTreadTextureSourceInfoTextView"
            android:layout_below="@+id/CarImageSourceInfoTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"/>

        <TextView
            android:layout_width="match_parent"
            android:paddingLeft="25dp"
            android:layout_height="wrap_content"
            android:text="@string/AndroidPlot_source_info_text"
            android:id="@+id/AndroidPlotSourceTextView"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/TireTreadTextureSourceInfoTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>
</ScrollView>